# ai-review-ci

./: .coverage  .envrc  .github-dashboard-e2e-e2e-label-pr-1783209993672.md  .github-dashboard-e2e-e2e-label-pr-1783210828423.md  .gitignore  .gitmodules  AGENTS.md  README.md  TODO.md  issues_list.json  justfile  pyproject.toml  ruff.toml
.aislop/: config.yml
.github/: pull_request_template.md
.github/workflows/: _gates.yml  _qc.yml  _review.yml  ambient.yml  ci.yml
.pr/: PR_BODY.md  REVIEW_LOG.md
ci/: runner.just
ci/private/: submit-candidate
docs/: Global-QC-and-Review-Doctrine.md
eval/fixtures/: README.md
global-hooks/: confront_closes.py  pre-commit  pre-push
justfiles/: bun.just  docs-and-configs.just  lean.just  python.just  qc-tooling.just  rust.just  sage.just  shared.just
lean/: lake-manifest.json  lakefile.toml
lean/AiReviewCi/: Answer.lean
qc_agent/: degradation.js  package.json  reliability.js  stale_finder.js
qc_agent/schema/: buildSchema.js  qc_agent-config.schema.json  types.ts
repo-hooks/: pre-commit  pre-push
reviews/: scope-diff.md  scope-repo.md
reviews/gardener/: task.md
reviews/general/: manifest.txt  template.md
reviews/slop/: manifest.txt  template.md
scaffolds/: README.md
scaffolds/bun/: justfile
scaffolds/bun-app/: justfile
scaffolds/bun-playwright/: justfile
scaffolds/bun-python/: justfile
scaffolds/python/: justfile
scaffolds/rust/: justfile
scaffolds/sage/: justfile
schemas/: doctor-report.schema.json
schemas/examples/: doctor-report-current-python.json
skills/anti-slop/: SKILL.md
skills/bespoke-software-policy/: SKILL.md
skills/ci-review-protocol/: SKILL.md
skills/fixing-slop/: SKILL.md
skills/git-integration-workflow/: SKILL.md
skills/label-routing/: SKILL.md
skills/policy-index/: SKILL.md
skills/pr-feedback-triage/: SKILL.md
skills/pr-scoping/: SKILL.md
skills/quality-control/: SKILL.md
skills/reviewing-llm-code/: SKILL.md
skills/style-guide/: SKILL.md
skills/test-guidelines/: SKILL.md
skills/tool-provisioning-and-environment-hygiene/: SKILL.md
src/ai_review_ci/: cli.py  context.py  doctor.py  gates.py  github_api.py  harness.py  install.py  issues.py  labels.py  models.py  policy_index.py  red_commit.py  report.py  review_guidelines.py  reviewer_eval.py  reviewer_identity.py  sarif.py  threads.py  tripwire_index.py
tests/: conftest.py  test_ast_grep_rules.py  test_confront_closes.py  test_context.py  test_doctor.py  test_gates.py  test_harness.py  test_hooks.py  test_install.py  test_issues.py  test_justfiles.py  test_labels.py  test_models.py  test_policy_index.py  test_pr_feedback_triage.py  test_publish_skills.py  test_python_qc_metadata.py  test_read_qc_excludes.py  test_red_commit.py  test_refresh_consumed_skills.py  test_report.py  test_review_guidelines.py  test_reviewer_eval.py  test_sarif.py  test_semgrep_rules.py  test_skill_references.py  test_slop_torture.py  test_threads.py  test_tripwire_index.py  test_vendor_skills.py
tests/fixtures/: gh_context_fixture.py
tool-artifacts/: check-report.py  run-review.py  vulture_whitelist.py
tool-artifacts/models/: pipeline_report.json  slop_classifier.pkl  training_data.json
tool-artifacts/scripts/: build-vendor-skills.py  check_skill_links.py  deptry_package_module_name_map.py  emit-test-writing-directive.sh  emit-triage-directive.sh  eval_reviewer_prompt.py  extract_reviewer_eval.py  hook-messages.sh  label_reviewer_eval.py  merge_ini.py  publish-skills.py  python_qc_metadata.py  read_aislop_failbelow.py  (+5 more)
tool-configs/: biome.json  black-global.toml  coverage-sage.ini  coverage.ini  eslint-global.json  eslint.config.js  grain.toml  import-linter-contracts.md  importlinter.ini  jscpd.json  knip.json  lintstagedrc.json  lintstagedrc.mjs  lizard-whitelist.txt  mypy-global.ini  mypy-sage.ini  package.json  prettier-global.json  pyproject.toml  pyright-local.json  pytest-local.ini  qc-excludes.toml  ruff-global.toml  sage-sgconfig.yml  semgrep.yml  slop-scan.config.json  slopconfig.yaml  test-semgrep.yml  tsconfig-local.json
tool-configs/templates/python-modern/: AGENTS.md  README.md  justfile  pyproject.toml
tool-configs/templates/python-modern/src/example_project/: __init__.py
tool-configs/templates/python-modern/tests/: test_contract.py
(+139 files in other folders)
