[project]
name = "ai-review-ci"
version = "0.1.0"
description = "OpenCode-powered review CI: SARIF-tracked repo-wide audits and PR diff reviews, installed into a repo with one command"
requires-python = ">=3.14"
dependencies = [
    "cyclopts",
    "playwright",
    "pydantic>=2",
    "pyyaml>=6.0.3",
    "sarif-pydantic>=0.6.2",
    "unidiff>=0.7.5",
]

[project.scripts]
ai-review-ci = "ai_review_ci.cli:main"

[dependency-groups]
dev = [
    "PyYAML",
    "pytest",
    "types-PyYAML",
    "types-unidiff>=0.7.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
# The real-boundary label tests authenticate to the live GitHub API and so need
# GH_TOKEN in CI. Least privilege (#218) scopes that token to an isolated
# `test-gh-boundary` step instead of the whole QC tier, so these tests are
# deselected from the default (tokenless) run and opted back in with
# `-m gh_boundary`.
markers = [
    "gh_boundary: real GitHub API boundary tests; need GH_TOKEN, deselected by default (#218)",
]
addopts = ["-m", "not gh_boundary"]

[tool.importlinter]
root_packages = ["ai_review_ci"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Report models are pure validation: no process execution, no network"
type = "forbidden"
source_modules = ["ai_review_ci.models"]
forbidden_modules = ["subprocess", "os", "urllib", "http", "socket", "requests"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_review_ci"]
